--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,20 @@
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3) ;
 }
 
+.light-mode {
+  --color-primary: #ffffff;
+  --color-secondary: #03B1A8;
+  --color-white: #454e56;
+  --color-black: #000000;
+  --color-grey-0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --color-grey-6: #12181b;
+}
+
 body {
   background-color: var(--color-primary);
   font-family: "Poppins", sans-serif;
@@ -652,5 +666,11 @@ section {
   transform: translate(-50%, -50%);
   font-weight: 800;
   font-size: 6.3rem;
+}
+
+@media screen and (max-width: 600px) {
+  header {
+    padding: 0;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
